docs(readme): 重构README文档，完善项目说明与部署指南
- 重新组织并丰富项目描述，突出技术栈与系统架构
- 增加Docker一键启动和本地开发环境详细步骤
- 补充项目目录结构说明，方便开发者理解源码布局
- 列出已实现与待开发功能，明确项目进展
- 添加环境变量配置示例及开发

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3.8'
-
 services:
   # MySQL数据库
   mysql:
     image: mysql:8.0
     container_name: fullstackmall-mysql
+    restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: fullstackmall
@@ -16,6 +15,10 @@ services:
       - mysql_data:/var/lib/mysql
     networks:
       - mall-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
   # Spring Boot后端
   backend:
@@ -23,16 +26,22 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: fullstackmall-backend
+    restart: unless-stopped
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/fullstackmall
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/fullstackmall?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: mall_user
       SPRING_DATASOURCE_PASSWORD: mall_password
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - mall-network
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/api/actuator/health"]
+      timeout: 5s
+      retries: 5
 
   # React前端
   frontend:
@@ -40,10 +49,12 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: fullstackmall-frontend
+    restart: unless-stopped
     ports:
       - "80:80"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     networks:
       - mall-network
 
