feat(auth): 优化认证接口，增强JWT支持与错误处理
- 改进AuthController，增加请求参数校验并返回统一ApiResponse格式
- 用户注册和登录接口添加详细Swagger注解与多种响应状态处理
- 登录由UserService迁移至AuthService处理认证逻辑，改进异常捕获和返回
- 增加AuthResponse和请求DTO的Swagger Schema注解，丰富API文档
- JwtService新增用户信息存储Token、刷新Token及Token有效期检测方法
- 优化Token签名密钥处理，添加Token格式验证功能
- Docker相关配置简化后端镜像，调整数据库连接及环境变量
- 前端购物车页面重构为异步请求接口获取数据，支持增删改操作与下单功能
- 前端添加购物车Loading、错误状态及用户登录跳转逻辑，增强用户体验
- Nginx配置改进，添加gzip压缩、CORS支持及健康检查接口
- 增加VS Code项目相关设置，提高Java开发体验

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,73 @@
 {
-    "java.compile.nullAnalysis.mode": "automatic"
+    // FullStackMall项目VS Code设置
+    "java.debug.settings.enableRunDebugCodeLens": true,
+    "java.debug.settings.showHex": false,
+    "java.debug.settings.showStaticVariables": true,
+    "java.debug.settings.showQualifiedNames": false,
+    "java.debug.settings.maxStringLength": 0,
+    "java.debug.settings.enableHotCodeReplace": true,
+    
+    // Maven配置
+    "java.configuration.maven.userSettings": null,
+    "maven.terminal.useJavaHome": true,
+    "maven.executable.path": "mvn",
+    
+    // 代码格式化
+    "java.format.settings.url": null,
+    "java.format.settings.profile": null,
+    "java.format.enabled": true,
+    
+    // 自动保存和格式化
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 1000,
+    "editor.formatOnSave": true,
+    "editor.formatOnPaste": true,
+    
+    // Spring Boot相关
+    "spring-boot.ls.java.home": null,
+    "spring-boot.ls.java.vmargs": [],
+    
+    // 文件关联
+    "files.associations": {
+        "*.yml": "yaml",
+        "*.yaml": "yaml"
+    },
+    
+    // 排除文件
+    "files.exclude": {
+        "**/target": true,
+        "**/logs": true,
+        "**/.mvn": true
+    },
+    
+    // 搜索排除
+    "search.exclude": {
+        "**/target": true,
+        "**/logs": true,
+        "**/.mvn": true
+    },
+    
+    // 代码提示
+    "java.completion.enabled": true,
+    "java.completion.overwrite": true,
+    "java.completion.guessMethodArguments": true,
+    
+    // 错误检查
+    "java.errors.incompleteClasspath.severity": "warning",
+    
+    // Terminal设置
+    "terminal.integrated.defaultProfile.windows": "PowerShell",
+    
+    // 文件编码
+    "files.encoding": "utf8",
+    
+    // 代码导航
+    "java.references.includeDecompiledSources": true,
+    "java.navigation.includeDecompiledSources": true,
+    
+    // 代码片段
+    "java.completion.filteredTypes": [
+        "java.awt.*",
+        "com.sun.*"
+    ]
 }
