--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -60,6 +60,13 @@
             <version>8.0.33</version>
         </dependency>
 
+        <!-- H2 Database (for testing) -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -79,11 +86,11 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Springdoc OpenAPI (Swagger) -->
+        <!-- SpringDoc OpenAPI 3 (Swagger) -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.0</version>
         </dependency>
 
         <!-- Spring Boot DevTools -->
