--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,53 @@
 services:
-  # MySQL数据库
+  # MySQL 数据库
   mysql:
-    image: mysql:8.0
+    image: registry.cn-hongkong.aliyuncs.com/mall4j-images/mysql:8.0.35
     container_name: fullstackmall-mysql
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: 123456
       MYSQL_DATABASE: fullstackmall
-      MYSQL_USER: mall_user
-      MYSQL_PASSWORD: mall_password
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
-      - mall-network
+      - fullstackmall-network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
 
-  # Spring Boot后端
+  # Spring Boot 后端
   backend:
-    build:
+    build: 
       context: ./backend
       dockerfile: Dockerfile
     container_name: fullstackmall-backend
     restart: unless-stopped
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/fullstackmall?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: 123456
+      JWT_SECRET: fullstackmall-docker-secret-key-for-production-environment
     ports:
       - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/fullstackmall?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-      SPRING_DATASOURCE_USERNAME: mall_user
-      SPRING_DATASOURCE_PASSWORD: mall_password
     depends_on:
       mysql:
         condition: service_healthy
     networks:
-      - mall-network
+      - fullstackmall-network
+    volumes:
+      - backend_logs:/app/logs
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/api/actuator/health"]
-      timeout: 5s
-      retries: 5
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # React前端
+  # React 前端
   frontend:
     build:
       context: ./frontend
@@ -53,14 +57,19 @@ services:
     ports:
       - "80:80"
     depends_on:
-      backend:
-        condition: service_healthy
+      - backend
     networks:
-      - mall-network
+      - fullstackmall-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+networks:
+  fullstackmall-network:
+    driver: bridge
 
 volumes:
   mysql_data:
-
-networks:
-  mall-network:
-    driver: bridge
+  backend_logs:
