--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
-# 使用多阶段构建
-# 第一阶段：构建阶段
-FROM node:18-alpine AS builder
+# 构建阶段
+FROM node:18-alpine AS build
 
+# 设置工作目录
 WORKDIR /app
 
-# 复制package.json和package-lock.json
+# 复制 package.json 和 package-lock.json
 COPY package*.json ./
 
 # 安装依赖
@@ -16,20 +16,17 @@ COPY . .
 # 构建应用
 RUN npm run build
 
-# 第二阶段：生产阶段
+# 生产阶段
 FROM nginx:alpine
 
-# 删除nginx默认配置
-RUN rm -rf /usr/share/nginx/html/*
+# 复制构建产物到 nginx 目录
+COPY --from=build /app/dist /usr/share/nginx/html
 
-# 复制构建好的文件到nginx目录
-COPY --from=builder /app/dist /usr/share/nginx/html
-
-# 复制nginx配置文件
+# 复制 nginx 配置文件
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # 暴露端口
 EXPOSE 80
 
-# 启动nginx
+# 启动 nginx
 CMD ["nginx", "-g", "daemon off;"]
