--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,35 +2,53 @@ server {
     listen 80;
     server_name localhost;
     
-    # 设置根目录
-    root /usr/share/nginx/html;
-    index index.html index.htm;
+    # Gzip 压缩配置
+    gzip on;
+    gzip_types
+        text/plain
+        text/css
+        text/js
+        text/xml
+        text/javascript
+        application/javascript
+        application/xml+rss
+        application/json;
     
-    # 静态文件缓存
+    # 静态文件缓存配置
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
     
-    # API代理到后端
+    # SPA 路由支持
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
+    
+    # API 代理到后端
     location /api/ {
         proxy_pass http://backend:8080/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # CORS 配置
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type";
+        
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
     
-    # React Router支持 - 所有路由都返回index.html
-    location / {
-        try_files $uri $uri/ /index.html;
+    # 健康检查端点
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
     }
-    
-    # 安全相关header
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    
-    # 错误页面
-    error_page 404 /index.html;
 }
