refactor(frontend): 优化应用状态管理和路由保护
- 增加 AuthProvider 包裹 Router，实现全局认证状态管理
- 新增 AppContent 组件，根据认证加载状态显示 LoadingSpinner
- 通过 ProtectedRoute 保护用户中心路由，防止未登录访问
- Header 组件改用 useAuth 获取用户认证状态和登出方法
- 移除 Header 中的本地登录状态管理，改为统一认证上下文管理

fix(backend): 调整接口路径与安全配置，删除冗余配置

- CartController、OrderController、ProductController 请求路径去除 api 前缀
- SecurityConfig 允许静态资源路径无鉴权访问
- 删除 WebMvcConfig 中重复的静态资源映射及视图控制器配置

feat(backend): 扩展购物车、订单、商品控制器错误处理与验证

- 详细完善输入参数校验及其错误响应

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
   
   # 数据源配置 - 开发环境
   datasource:
-    url: jdbc:mysql://127.0.0.1:3307/fullstackmall?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://127.0.0.1:3307/fullstackmall?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -40,6 +40,10 @@ server:
   port: 8080
   servlet:
     context-path: /api
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
   # 开发环境错误详情
   error:
     include-message: always
